[FEATURE] Create Stub version of methods PUT .../discrepancy/
