# server/core/DiscrepancyMapper.js
@@ -1,0 +1,11 @@
+'use strict';
+
+class DiscrepancyMapper {
+  // Map the internal settlement to  GET settlements/id response body
+  static getResponseBodyForGetDiscrepancy(discrepancy) {
+    const returnedResponseBody = discrepancy;
+    return returnedResponseBody;
+  }
+}
+
+module.exports = DiscrepancyMapper;
